# rentoptimal

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/rentoptimal/: __init__.py  cli.py  models.py  report.py  simulator.py
src/rentoptimal/market/: __init__.py  analyzer.py  benchmarks.py  demand.py
src/rentoptimal/pricing/: __init__.py  comparables.py  model.py  optimizer.py
tests/: test_benchmark.py  test_core.py  test_integration.py  test_market.py  test_models.py  test_pricing.py  test_simulator.py
