[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rentoptimal"
version = "0.1.0"
description = "Rental Price Optimizer"
authors = [{ name = "Mukunda Katta" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pydantic>=2.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
rentoptimal = "rentoptimal.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
